--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://nettemsarath.github.io/protfoliosite",
-  "name": "practice_amy_2022",
+  "homepage": "https://nettemsarath.github.io/protfoliosite/",
+  "name": "protfoliosite",
   "private": true,
   "version": "0.0.0",
   "scripts": {
